整体风格修改

--- a/assets/sass/el/sideMenu.scss
+++ b/assets/sass/el/sideMenu.scss
@@ -1,8 +1,8 @@
 // 菜单的字体颜色
-$color: #fff;
+$color: #93939B;
 
 // 菜单的背景色
-$backgroud-color: #184084;
+$backgroud-color: #fff;
 
 $is-active-color: #0c58ad;
 
